<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.PlayerDetailFragment">


    <ImageView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/back"
        android:src="@drawable/baseline_arrow_back_ios_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/content_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backButton"
        />

    <TextView
        android:id="@+id/nickName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content_image" />

    <TextView
        android:id="@+id/playerDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:textAlignment="textStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/nickName"
        app:layout_constraintTop_toBottomOf="@+id/nickName"
        tools:ignore="VisualLintLongText" />

    <Button
        android:id="@+id/favoriteButton"
        android:layout_width="100dp"
        android:layout_height="75dp"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/favorite_button"
        android:text=""
        app:cornerRadius="10dp"
        app:icon="@drawable/favorite"
        app:iconGravity="textEnd"
        app:iconPadding="0dp"
        app:iconSize="24dp"
        app:iconTint="#000000"
        app:layout_constraintStart_toStartOf="@+id/playerDescription"
        app:layout_constraintTop_toBottomOf="@+id/playerDescription"
        app:strokeColor="#FA000000"
        app:strokeWidth="2dp" />

    <TextView
        android:id="@+id/favorite_count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textColor="@color/Red"
        app:layout_constraintBottom_toBottomOf="@+id/favoriteButton"
        app:layout_constraintStart_toEndOf="@+id/favoriteButton"
        app:layout_constraintTop_toTopOf="@+id/favoriteButton" />


</androidx.constraintlayout.widget.ConstraintLayout>